# Trafaret

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  linter.cfg  neovim-tasks.json
inc/: hexlineedit.h  mainwindow.h
src/: hexlineedit.cpp  mainwindow.cpp  mainwindow.ui
